--- a/replay/CMakeLists.txt
+++ b/replay/CMakeLists.txt
@@ -4,8 +4,15 @@ set(REPLAY_SOURCE
   xz_decomp.c
   )
 
-add_library(replay STATIC ${REPLAY_SOURCE})
-
+add_library(osux_replay STATIC ${REPLAY_SOURCE})
 
 add_executable(parse_replay main.c)
-target_link_libraries(parse_replay osux_util mod db bm lzma)
+target_link_libraries(
+  parse_replay
+  
+  osux_replay
+  osux_util
+  osux_mod
+  osux_db
+  osux_bm
+  lzma)
