--- a/taikorank/CMakeLists.txt
+++ b/taikorank/CMakeLists.txt
@@ -1,4 +1,12 @@
 
+
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
+
 set(TR_SOURCE
   main.c
   check_osu_file.c
