--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -2,4 +2,10 @@
 set(PYTHON_SOURCE
   python.c python.h)
 
-add_library(pythonembed STATIC ${PYTHON_SOURCE})
+add_library(pythonembed SHARED ${PYTHON_SOURCE})
+target_link_libraries(pythonembed python2.7)
+
+install (
+  TARGETS pythonembed
+  LIBRARY DESTINATION lib/osux/
+  )
