working toward windows compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:\$ORIGIN/../lib/osux")
 
-if (NOT DEFINED CMAKE_ENABLE_C99)
-  set(CMAKE_ENABLE_C99 "-std=gnu99")
-endif(NOT DEFINED CMAKE_ENABLE_C99)
+# if (NOT DEFINED CMAKE_ENABLE_C99)
+#    set(CMAKE_ENABLE_C99 "-std=gnu99")
+# endif(NOT DEFINED CMAKE_ENABLE_C99)
 
-set(CMAKE_C_FLAGS "${CMAKE_ENABLE_C99} -Wall -Wl,-Xld -Wl,--disable-new-dtags")
+#set(CMAKE_C_FLAGS "${CMAKE_ENABLE_C99} -Wall -Wl,-Xld -Wl,--disable-new-dtags")
 
 enable_testing()
 
