--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,16 +1,16 @@
 
 set(UTIL_SOURCE
-  hash_table.c
-  heap.c
-  list.c
-  split.c
-  stack.c
-  yaml2.c
-  uleb128.c
-  re.c
-  sum.c
-  data.c
-  md5.c)
+  hash_table.c hash_table.h 
+  heap.c heap.h
+  list.c list.h list_node.h
+  split.c split.h
+  stack.c stack.h
+  yaml2.c yaml2.h
+  uleb128.c uleb128.h
+  re.c re.h
+  sum.c sum.h
+  data.c data.H
+  md5.c md5.h)
 
 add_library(osux_util STATIC ${UTIL_SOURCE})
 target_link_libraries(osux_util ssl crypto yaml)
