--- a/beatmap/parser/CMakeLists.txt
+++ b/beatmap/parser/CMakeLists.txt
@@ -6,4 +6,4 @@ add_subdirectory(parser_c)
 set(PARSER_SRC parser.c parser.h)
 
 add_library(osux_parser STATIC ${PARSER_SRC})
-#target_link_libraries(osux_parser dl)
+target_link_libraries(osux_parser ${CMAKE_DL_LIBS})
