--- a/taikorank/CMakeLists.txt
+++ b/taikorank/CMakeLists.txt
@@ -27,11 +27,12 @@ find_package(OpenMP)
 if(OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+	set(CMAKE_EXE_LINKER_FLAGS
+          "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif(OPENMP_FOUND)
 
 add_executable(taiko_ranking ${TR_SOURCE})
-target_link_libraries(taiko_ranking osux mysqlclient pthread m)
+target_link_libraries(taiko_ranking osux mysqlclient ${CMAKE_THREAD_LIBS_INIT} m)
 
 install( 
      TARGETS taiko_ranking
