--- a/taikorank/yaml/final_cst.yaml
+++ b/taikorank/yaml/final_cst.yaml
@@ -1,5 +1,8 @@
 # influence
 # x is in ms
+# y in [0, 1] 
+# 1 -> max influence
+# 0 -> min influence
 vect_influence_length: 3
 vect_influence_x1: 0.
 vect_influence_y1: 1.
@@ -13,10 +16,26 @@ vect_scale_length: 2
 vect_scale_x1: 0.
 vect_scale_y1: 0.
 vect_scale_x2: 16e4.
-vect_scale_y2: 20.
+vect_scale_y2: 16e4.
 
 ### pow
 density_pow:  1
-reading_pow:  0
-pattern_pow:  0
+reading_pow:  1
+pattern_pow:  1
 accuracy_pow: 1
+
+### weight
+# x is the number of the object, from 0
+# y the percentage given
+vect_weight_length: 5
+vect_weight_x1: 0
+vect_weight_y1: 1.
+vect_weight_x2: 512
+vect_weight_y2: 0.001
+vect_weight_x3: 1024
+vect_weight_y3: 0.
+vect_weight_x4: 2048
+vect_weight_y4: 0.
+vect_weight_x5: 50000
+vect_weight_y5: 0.
+
