--- a/taikorank/yaml/pattern_cst.yaml
+++ b/taikorank/yaml/pattern_cst.yaml
@@ -1,69 +1,51 @@
-# scale
+### scale
 vect_scale_length: 2
 vect_scale_x1: 0.
-vect_scale_y1: 0.
-vect_scale_x2: 1e2.
-vect_scale_y2: 20.
+vect_scale_y1: 4.
+vect_scale_x2: 1.01
+vect_scale_y2: 1.
 
-# coeff for singletap proba
+### patterns
+# max length used
+max_pattern_length: 4
+# x is in [0, 1]
+vect_pattern_length: 2
+vect_pattern_x1: 0.
+vect_pattern_y1: 0.
+vect_pattern_x2: 1.01
+vect_pattern_y2: 1.01
 # x is in ms
-vect_singletap_length: 4
+vect_influence_length: 4
+vect_influence_x1: 0
+vect_influence_y1: 1.
+vect_influence_x2: 60000. #1min
+vect_influence_y2: 0.8
+vect_influence_x3: 120000. #2min
+vect_influence_y3: 0.
+vect_influence_x4: 3600000.
+vect_influence_y4: 0.
+
+### coeff for singletap proba
+# x is in ms
+vect_singletap_length: 5
 vect_singletap_x1: 0.
 vect_singletap_y1: 0.
-vect_singletap_x2: 20.
-vect_singletap_y2: 0.
-vect_singletap_x3: 1000.
-vect_singletap_y3: 1.
-vect_singletap_x4: 3600000. #1h should be fine enough
+vect_singletap_x2: 100.
+vect_singletap_y2: 0.2
+vect_singletap_x3: 150.
+vect_singletap_y3: 0.6
+vect_singletap_x4: 1000.
 vect_singletap_y4: 1.
+vect_singletap_x5: 3600000. #1h should be enough
+vect_singletap_y5: 1.
 # 160ms ~ 180bpm 1/2
 # 125ms = 240bpm 1/2
 
-# range for singletap: (i = start; i <= end; i += step)
+### range for singletap: (i = start; i <= end; i += step)
 # in %
-proba_start: 10  
-proba_end:   100  
+proba_start: 100
+proba_end:   100 # still wip
 proba_step:  10
 
-# stars coeff
-star_alt:   1.0
-
-# patterns
-max_pattern_length:  4
-length_pattern_used: 2
-patterns :
-  # 1 pattern
-  - [d, 0.2, infinity]
-  - [k, 0.2, infinity]
-  # 2 pattern
-  - [dd, 1.0, 1.8]
-  - [dk, 1.5, 3.0]
-  - [kd, 1.5, 3.0]
-  - [kk, 1.0, 1.8]
-  # 3 pattern
-  - [ddd, 2.0, 2.5]
-  - [ddk, 2.5, 3.0]
-  - [dkd, 2.5, 3.5]
-  - [dkk, 2.5, 4.2]
-  - [kdd, 2.5, 3.5]
-  - [kdk, 2.5, 3.5]
-  - [kkd, 2.5, 3.0]
-  - [kkk, 2.0, 2.5]
-  # 4 pattern d
-  - [dddd, 3.0, 3.5]
-  - [dddk, 3.0, 5.0]
-  - [ddkd, 3.0, 4.0]
-  - [ddkk, 3.0, 3.5]
-  - [dkdd, 4.0, 6.5]
-  - [dkdk, 3.5, 4.0]
-  - [dkkd, 4.5, 6.0]
-  - [dkkk, 3.5, 4.5]
-  # 4 pattern k
-  - [kddd, 3.5, 4.5]
-  - [kddk, 5.5, 5.0]
-  - [kdkd, 4.0, 3.5]
-  - [kdkk, 4.5, 7.0]
-  - [kkdd, 3.0, 3.5]
-  - [kkdk, 3.0, 4.0]
-  - [kkkd, 3.0, 5.0]
-  - [kkkk, 3.0, 3.5]
+### stars coeff
+star_pattern: 1.0
