--- a/taikorank/yaml/reading_cst.yaml
+++ b/taikorank/yaml/reading_cst.yaml
@@ -1,21 +1,31 @@
 ### scale
-vect_scale_length: 3
-vect_scale_x1: 0.
-vect_scale_y1: 20.
-vect_scale_x2: 2e7.
-vect_scale_y2: 0.
-vect_scale_x3: 1e10.
-vect_scale_y3: 0.
+vect_scale_length: 6
+vect_scale_x1: 0.      # don't give much more
+vect_scale_y1: 2.6
+vect_scale_x2: 3.30e6. # 600bpma
+vect_scale_y2: 2.5
+vect_scale_x3: 4.75e6. # 400bpma
+vect_scale_y3: 2.
+vect_scale_x4: 9.64e6. # 200bpma
+vect_scale_y4: 1.5
+vect_scale_x4: 1.38e7. # 140bpma
+vect_scale_y4: 1.1
+vect_scale_x5: 2e7.    # <100bpma
+vect_scale_y5: 1.
+vect_scale_x6: 5e10.   # make sure high enough
+vect_scale_y6: 1.
 
+### monte carlo
 monte_carlo_nb_pts: 5000
 
 ### seen 
 # x is in ms * px^2
+# as there is only one value this is Id
 vect_seen_length: 2
 vect_seen_x1: 0.
 vect_seen_y1: 0.
-vect_seen_x2: 1e10.
-vect_seen_y2: 1e10.
+vect_seen_x2: 5e10.
+vect_seen_y2: 5e10.
 
 ### coeff for star
 star_seen: 1.
