--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -2,17 +2,18 @@ include $(top_srcdir)/common.mk
 
 lib_LTLIBRARIES = libosux_util.la 
 libosux_util_la_SOURCES = \
-	hash_table.c \
-	heap.c \
-	list.c \
-	split.c \
-	stack.c \
-	yaml2.c \
-	uleb128.c \
-	re.c \
-	sum.c \
-	data.c \
-	md5.c
+	hash_table.c hash_table.h \
+	heap.c heap.h \
+	list.c list.h \
+	split.c split.h \
+	stack.c stack.h \
+	yaml2.c yaml2.h \
+	uleb128.c uleb128.h \
+	re.c re.h \
+	sum.c sum.h \
+	data.c data.h \
+	md5.c md5.h \
+	string2.c string2.h
 
 libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS) $(CRYPTO_CFLAGS)
 libosux_util_la_LDFLAGS = $(YAML_LIBS) $(AM_LDFLAGS) $(CRYPTO_LIBS)
