--- a/taikorank/yaml/reading_cst.yaml
+++ b/taikorank/yaml/reading_cst.yaml
@@ -1,6 +1,11 @@
 # Everything is based on resolution with 10 objects on screen (4:3)
 
-### scale
+### Scale
+## Brief:
+# Scaling function for reading stars.
+## Variable:
+# x is the sum of all parameters for reading stars
+# y is the reading star rating
 vect_scale_length: 6
 vect_scale_x1: 0.      # don't give much more
 vect_scale_y1: 2.6
@@ -17,8 +22,13 @@ vect_scale_y5: 1.
 vect_scale_x6: 1e10.   # make sure high enough
 vect_scale_y6: 1.
 
-### interest
-# x is in ms
+### Interest
+## Brief:
+# Objects are watched to specific times, this function indicates which
+# times are more important.
+## Variable:
+# x is in ms, the time before the object is out of the "play circle"
+# y is the interest given to the object.
 vect_interest_length: 4
 vect_interest_x1: 0.
 vect_interest_y1: 0.
@@ -29,15 +39,28 @@ vect_interest_y3: 0.
 vect_interest_x4: 3600000.
 vect_interest_y4: 0.
 
-### seen 
-# x is in ms * px^2
-# as there is only one value this is Id
+### Seen 
+## Brief:
+# Integrate the interest of the object based on the visible part of 
+# the object and its time on screen.
+## Variable:
+# x is in ms * px^2 * interset, the "volume" representing how well it 
+#   is seen.
+# y the seen value
+## Note:
+# As there is only one parameter the function is transfered to the 
+# scaling.
 vect_seen_length: 2
 vect_seen_x1: 0.
 vect_seen_y1: 0.
 vect_seen_x2: 1e10.
 vect_seen_y2: 1e10.
 
-### coeff for star
+### Parameters coeff
+## Brief:
+# Enable or disable a parameter of the star rating by modifying its 
+# multiplier coefficient.
+## Variable:
+# Multiplier in [0, 1]
 star_seen: 1.
 
