--- a/taikorank/yaml/reading_cst.yaml
+++ b/taikorank/yaml/reading_cst.yaml
@@ -9,17 +9,17 @@
 vect_scale_length: 6
 vect_scale_x1: 0.      # don't give much more
 vect_scale_y1: 2.6
-vect_scale_x2: 1.2e2.  # 600bpma
+vect_scale_x2: 1.2e2   # 600bpma
 vect_scale_y2: 2.5
-vect_scale_x3: 1.8e2.  # 400bpma
+vect_scale_x3: 1.8e2   # 400bpma
 vect_scale_y3: 2.
-vect_scale_x4: 3.6e2.  # 200bpma
+vect_scale_x4: 3.6e2   # 200bpma
 vect_scale_y4: 1.5
-vect_scale_x4: 5.1e2.  # 140bpma
+vect_scale_x4: 5.1e2   # 140bpma
 vect_scale_y4: 1.1
-vect_scale_x5: 7.2e2.  # 100bpma
+vect_scale_x5: 7.2e2   # 100bpma
 vect_scale_y5: 1.
-vect_scale_x6: 1e10.   # make sure high enough
+vect_scale_x6: 1e10    # make sure high enough
 vect_scale_y6: 1.
 
 ### Interest
@@ -53,8 +53,8 @@ vect_interest_y4: 0.
 vect_seen_length: 2
 vect_seen_x1: 0.
 vect_seen_y1: 0.
-vect_seen_x2: 1e10.
-vect_seen_y2: 1e10.
+vect_seen_x2: 1e10
+vect_seen_y2: 1e10
 
 ### Parameters coeff
 ## Brief:
