--- a/taikorank/yaml/accuracy_cst.yaml
+++ b/taikorank/yaml/accuracy_cst.yaml
@@ -19,11 +19,11 @@ vect_scale_y2: 12.
 vect_slow_length: 4
 vect_slow_x1: 0.
 vect_slow_y1: 2.
-vect_slow_x2: 70.
+vect_slow_x2: 50.
 vect_slow_y2: 1.2
-vect_slow_x3: 140.
+vect_slow_x3: 100.
 vect_slow_y3: 1.
-vect_slow_x4: 10000.
+vect_slow_x4: 1e10
 vect_slow_y4: 1.
 
 ### Spacing influence
