--- a/taikorank/yaml/reading_cst.yaml
+++ b/taikorank/yaml/reading_cst.yaml
@@ -7,19 +7,19 @@
 # x is the sum of all parameters for reading stars
 # y is the reading star rating
 vect_scale_length: 6
-vect_scale_x1: 0.      # don't give much more
+vect_scale_x1: 0.    # don't give much more
 vect_scale_y1: 2.6
-vect_scale_x2: 1.2e2   # 600bpma
+vect_scale_x2: 21    # 600bpma
 vect_scale_y2: 2.5
-vect_scale_x3: 1.8e2   # 400bpma
+vect_scale_x3: 47    # 400bpma
 vect_scale_y3: 2.
-vect_scale_x4: 3.6e2   # 200bpma
+vect_scale_x4: 184   # 200bpma
 vect_scale_y4: 1.5
-vect_scale_x4: 5.1e2   # 140bpma
+vect_scale_x4: 317   # 140bpma
 vect_scale_y4: 1.1
-vect_scale_x5: 7.2e2   # 100bpma
+vect_scale_x5: 400   # 100bpma
 vect_scale_y5: 1.
-vect_scale_x6: 1e10    # make sure high enough
+vect_scale_x6: 1e5  # make sure high enough
 vect_scale_y6: 1.
 
 ### Interest
@@ -29,15 +29,19 @@ vect_scale_y6: 1.
 ## Variable:
 # x is in ms, the time before the object is out of the "play circle"
 # y is the interest given to the object.
-vect_interest_length: 4
+## Note:
+# Under 10bpma difficulty might be reversed.
+vect_interest_length: 5
 vect_interest_x1: 0.
 vect_interest_y1: 0.
 vect_interest_x2: 800.    # ~time for 200bpma
 vect_interest_y2: 1.
 vect_interest_x3: 1600.   # ~time for 100bpma
-vect_interest_y3: 0.
-vect_interest_x4: 3600000.
+vect_interest_y3: 0.1
+vect_interest_x4: 16000.  # ~time for 10bpma
 vect_interest_y4: 0.
+vect_interest_x5: 3600000.
+vect_interest_y5: 0.
 
 ### Seen 
 ## Brief:
