--- a/taikorank/test/test_other.yaml
+++ b/taikorank/test/test_other.yaml
@@ -1,6 +1,6 @@
 tests:
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/other/obj/"
     field: "final_star"
@@ -17,4 +17,31 @@ tests:
       160bpm 1/4[4 obj]
       160bpm 1/4[2 obj]
       160bpm 1/4[1 obj]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/other/density_pattern/pack_1/"
+    field: "final_star"
+    maps: |
+      160bpm 256obj[ddkd ddkd ddkd ddkd]
+      160bpm 256obj[ddkd ddk_ ddkd ddk_]
+      160bpm 256obj[ddk_ ddk_ ddk_ ddk_]
+      160bpm 256obj[ddk_ ddk_ ddk_ d_k_]
+      160bpm 256obj[ddk_ ddk_ d_k_ d_k_]
+      160bpm 256obj[ddk_ d_k_ ddk_ d_k_]
+      160bpm 256obj[ddk_ d_k_ d_k_ d_k_]
+      160bpm 256obj[d_k_ d_k_ d_k_ d_k_]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/other/density_pattern/pack_2/"
+    field: "final_star"
+    maps: |
+      160bpm 256obj[ddkd ddkd ddkd ddkd]
+      160bpm 256obj[ddkd ddk_ ddkd ddk_]
+      160bpm 256obj[ddkd_ddk_ d_k_ d_k_]
+      160bpm 256obj[ddk_ ddk_ d_k_ d_k_]
+      160bpm 256obj[ddk_ d_k_ ddk_ d_k_]
+      160bpm 256obj[ddk_ d_k_ d_k_ d_k_]
+      160bpm 256obj[d_k_ d_k_ d_k_ d_k_]
   #########################################################
