--- a/taikorank/test/test_pattern.yaml
+++ b/taikorank/test/test_pattern.yaml
@@ -1,6 +1,38 @@
 tests:
   #########################################################
-  - 
+  -
+    do: True
+    path: "./maps_test/pattern/stream_basic/"
+    field: "pattern_star"
+    maps: |
+      170bpm bundle[12 ddk ddk ddk ddk]
+      170bpm bundle[16 ddkd ddkd ddkd ddkd]
+      170bpm bundle[16 dkdk dkdk dkdk dkdk]
+      170bpm bundle[16 dddd dddd dddd dddd]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/pattern/stream_kd*/"
+    field: "pattern_star"
+    maps: |
+      170bpm bundle[12 ddk ddk ddk ddk]
+      170bpm bundle[16 kddd kddd kddd kddd]
+      170bpm bundle[10 ddddk ddddk]
+      170bpm bundle[12 kddd dd kddd dd]
+      170bpm bundle[16 kddd dddd kddd dddd]
+      170bpm bundle[16 dddd dddd dddd dddd]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/pattern/stream_kkd*/"
+    field: "pattern_star"
+    maps: |
+      170bpm bundle[10 dddkk dddkk]
+      170bpm bundle[12 dddd kk dddd kk]
+      170bpm bundle[16 dddd ddkk dddd ddkk]
+      170bpm bundle[16 dddd dddd dddd dddd]
+  #########################################################
+  -
     do: True
     path: "./maps_test/pattern/stream16_kddd/"
     field: "pattern_star"
@@ -8,8 +40,9 @@ tests:
       170bpm bundle[16 kdkd dddd kdkd dddd]
       170bpm bundle[16 kddd kddd kddd kddd]
       170bpm bundle[16 kddd dddd kddd dddd]
+      170bpm bundle[16 dddd dddd dddd dddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/stream16_ddkk/"
     field: "pattern_star"
@@ -17,8 +50,9 @@ tests:
       170bpm bundle[16 dddd kkkk ddkk ddkk]
       170bpm bundle[16 dddd kkkk dddd kkkk]
       170bpm bundle[16 dddd dddd kkkk kkkk]
+      170bpm bundle[16 dddd dddd dddd dddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/stream12_xxxx_xx/"
     field: "pattern_star"
@@ -26,8 +60,9 @@ tests:
       170bpm bundle[12 ddkd kk ddkd kk]
       170bpm bundle[12 dddd kk dddd kk]
       170bpm bundle[12 kddd dd kddd dd]
+      170bpm bundle[16 dddd dddd dddd dddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/stream12_xxx_xxx/"
     field: "pattern_star"
@@ -35,8 +70,9 @@ tests:
       170bpm bundle[12 ddk ddk ddd kkk]
       170bpm bundle[12 ddd kkk ddd kkk]
       170bpm bundle[12 ddk ddk ddk ddk]
+      170bpm bundle[16 dddd dddd dddd dddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/repetition/2/"
     field: "pattern_star"
@@ -46,7 +82,7 @@ tests:
       160bpm space 2*1/1[ddk]
       160bpm space 2*1/1[ddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/repetition/3/"
     field: "pattern_star"
@@ -56,7 +92,7 @@ tests:
       160bpm space 3*1/1[ddk]
       160bpm space 3*1/1[ddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/repetition/4/"
     field: "pattern_star"
@@ -66,7 +102,7 @@ tests:
       160bpm space 4*1/1[ddk]
       160bpm space 4*1/1[ddd]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/group_pattern/x_x_xxx_/"
     field: "pattern_star"
@@ -75,7 +111,7 @@ tests:
       160bpm[d_d_ddk_ d_d_ddk_]
       160bpm[d_d_ddd_ d_d_ddd_]
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/pattern/group_pattern/xxxxx___/"
     field: "pattern_star"
