--- a/taikorank/test/test_reading.yaml
+++ b/taikorank/test/test_reading.yaml
@@ -1,6 +1,6 @@
 tests:
   #########################################################
-  - 
+  -
     do: True
     path: "./maps_test/reading/no_hide/"
     field: "reading_star"
@@ -24,7 +24,161 @@ tests:
       40bpm 1/4[120bpma]
       40bpm 1/4[100bpma]
   #########################################################
-  - 
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*100bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[100bpma](HD FL )
+      40bpm 1/4[100bpma](HR FL )
+      40bpm 1/4[100bpma](FL )
+      40bpm 1/4[100bpma](HD )
+      40bpm 1/4[100bpma](HR )
+      40bpm 1/4[100bpma]
+      40bpm 1/4[100bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*120bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[120bpma](HD FL )
+      40bpm 1/4[120bpma](HR FL )
+      40bpm 1/4[120bpma](FL )
+      40bpm 1/4[120bpma](HD )
+      40bpm 1/4[120bpma](HR )
+      40bpm 1/4[120bpma]
+      40bpm 1/4[120bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*140bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[140bpma](HD FL )
+      40bpm 1/4[140bpma](HR FL )
+      40bpm 1/4[140bpma](FL )
+      40bpm 1/4[140bpma](HD )
+      40bpm 1/4[140bpma](HR )
+      40bpm 1/4[140bpma]
+      40bpm 1/4[140bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*160bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[160bpma](HD FL )
+      40bpm 1/4[160bpma](HR FL )
+      40bpm 1/4[160bpma](FL )
+      40bpm 1/4[160bpma](HD )
+      40bpm 1/4[160bpma](HR )
+      40bpm 1/4[160bpma]
+      40bpm 1/4[160bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*180bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[180bpma](HD FL )
+      40bpm 1/4[180bpma](HR FL )
+      40bpm 1/4[180bpma](FL )
+      40bpm 1/4[180bpma](HR )
+      40bpm 1/4[180bpma](HD )
+      40bpm 1/4[180bpma]
+      40bpm 1/4[180bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*200bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[200bpma](HD FL )
+      40bpm 1/4[200bpma](HR FL )
+      40bpm 1/4[200bpma](FL )
+      40bpm 1/4[200bpma](HR )
+      40bpm 1/4[200bpma](HD )
+      40bpm 1/4[200bpma]
+      40bpm 1/4[200bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*240bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[240bpma](HD FL )
+      40bpm 1/4[240bpma](HR FL )
+      40bpm 1/4[240bpma](FL )
+      40bpm 1/4[240bpma](HR )
+      40bpm 1/4[240bpma](HD )
+      40bpm 1/4[240bpma]
+      40bpm 1/4[240bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*280bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[280bpma](HD FL )
+      40bpm 1/4[280bpma](HR FL )
+      40bpm 1/4[280bpma](FL )
+      40bpm 1/4[280bpma](HR )
+      40bpm 1/4[280bpma](HD )
+      40bpm 1/4[280bpma]
+      40bpm 1/4[280bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*320bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[320bpma](HD FL )
+      40bpm 1/4[320bpma](HR FL )
+      40bpm 1/4[320bpma](FL )
+      40bpm 1/4[320bpma](HR )
+      40bpm 1/4[320bpma](HD )
+      40bpm 1/4[320bpma]
+      40bpm 1/4[320bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*360bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[360bpma](HD FL )
+      40bpm 1/4[360bpma](HR FL )
+      40bpm 1/4[360bpma](FL )
+      40bpm 1/4[360bpma](HR )
+      40bpm 1/4[360bpma](HD )
+      40bpm 1/4[360bpma]
+      40bpm 1/4[360bpma](EZ )
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/reading/no_hide/*400bpma*.osu"
+    mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
+    field: "reading_star"
+    maps: |
+      40bpm 1/4[400bpma](HD FL )
+      40bpm 1/4[400bpma](HR FL )
+      40bpm 1/4[400bpma](FL )
+      40bpm 1/4[400bpma](HR )
+      40bpm 1/4[400bpma](HD )
+      40bpm 1/4[400bpma]
+      40bpm 1/4[400bpma](EZ )
+  #########################################################
+  -
     do: True
     path: "./maps_test/reading/hide/"
     field: "reading_star"
