Add autoconvert for taiko mode. CorreCorrecting error in list to array and hashtable. Add test for autoconvert.

--- a/beatmap/Makefile.am
+++ b/beatmap/Makefile.am
@@ -14,7 +14,9 @@ libbeatmap_la_SOURCES = \
 	storyboard.c \
 	storyboard.h \
 	timingpoint.c \
-	timingpoint.h 
+	timingpoint.h \
+	taiko_autoconvert.c \
+	taiko_autoconvert.h
 
 libbeatmap_la_LIBADD = parser/libosux_parser.la 
 
